Fixed Android flash icon.

--- a/src/android/res/layout/cszbarscanner.xml
+++ b/src/android/res/layout/cszbarscanner.xml
@@ -1,65 +1,88 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/csZbarScannerView"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:background="@color/csZbarScannerBackground" >
+             android:id="@+id/csZbarScannerView"
+             android:layout_width="wrap_content"
+             android:layout_height="wrap_content"
+             android:background="@color/csZbarScannerBackground" >
 
     <TextView android:id="@+id/csZbarScannerTitle"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|center_horizontal"
-        android:paddingTop="15dp"
-        android:paddingBottom="5dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:gravity="center"
-        android:text="@string/csZbarScannerTitle"
-        android:textColor="@color/csZbarScannerTextColor"
-        android:background="@color/csZbarScannerTextBackground"
-        android:fontFamily="sans-serif-light"
-        android:textSize="15pt" />
-
-    <TextView android:id="@+id/csZbarScannerInstructions"
-        android:layout_gravity="center|bottom"
-        android:layout_width="296dp"
-        android:layout_height="wrap_content"
-        android:paddingTop="5dp"
-        android:paddingBottom="15dp"
-        android:paddingLeft="5dp"
-        android:paddingRight="5dp"
-        android:gravity="center"
-        android:textSize="8pt"
-        android:textColor="@color/csZbarScannerTextColor"
-        android:fontFamily="sans-serif-light"
-        android:text="@string/csZbarScannerInstructions" />
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:layout_gravity="top|center_horizontal"
+              android:paddingTop="15dp"
+              android:paddingBottom="5dp"
+              android:paddingLeft="5dp"
+              android:paddingRight="5dp"
+              android:gravity="center"
+              android:text="@string/csZbarScannerTitle"
+              android:textColor="@color/csZbarScannerTextColor"
+              android:background="@color/csZbarScannerTextBackground"
+              android:fontFamily="sans-serif-light"
+              android:textSize="15pt" />
 
     <RelativeLayout android:id="@+id/csZbarScannerSightContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_gravity="center_horizontal|bottom">
+                    android:layout_width="wrap_content"
+                    android:layout_height="fill_parent"
+                    android:layout_gravity="center_horizontal|bottom">
 
         <View android:id="@+id/csZbarScannerSight"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            android:layout_centerInParent="true"
-            android:gravity="center_vertical"
-            android:background="#ff0000" />
+              android:layout_width="match_parent"
+              android:layout_height="1dp"
+              android:layout_marginLeft="10dp"
+              android:layout_marginRight="10dp"
+              android:layout_centerInParent="true"
+              android:gravity="center_vertical"
+              android:background="#ff0000" />
 
-        <ImageButton
-            android:layout_width="60dp"
-            android:layout_height="70dp"
-            android:id="@+id/imageButton"
-            android:src="@drawable/camera_flash"
-            android:background="@color/csZbarScannerTextBackground"
-            android:onClick="toggleFlash"
-            android:longClickable="true"
-            android:visibility="visible"
+        <TextView android:id="@+id/csZbarScannerInstructions"
+                  android:layout_width="296dp"
+                  android:layout_height="wrap_content"
+                  android:layout_above="@+id/bottomActionLayout"
+                  android:layout_centerHorizontal="true"
+                  android:layout_gravity="center"
+                  android:paddingTop="5dp"
+                  android:paddingBottom="15dp"
+                  android:paddingLeft="5dp"
+                  android:paddingRight="5dp"
+                  android:gravity="center"
+                  android:textSize="8pt"
+                  android:textColor="@color/csZbarScannerTextColor"
+                  android:fontFamily="sans-serif-light"
+                  android:text="@string/csZbarScannerInstructions" />
+
+        <RelativeLayout
+            android:id="@+id/bottomActionLayout"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
             android:layout_alignParentBottom="true"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentEnd="true" />
+            android:background="@android:color/white">
+            <ImageButton
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:id="@+id/imageButton"
+                android:src="@drawable/camera_flash"
+                android:onClick="toggleFlash"
+                android:longClickable="true"
+                android:visibility="visible"
+                android:layout_alignParentBottom="true"
+                android:background="@android:color/transparent"
+                android:tint="@android:color/holo_blue_light"
+                android:paddingBottom="5dp"
+                android:layout_marginLeft="10dp"
+                android:scaleType="fitCenter"/>
+
+            <Button
+                android:id="@+id/cancelButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:layout_centerVertical="true"
+                android:background="@android:color/transparent"
+                android:textColor="@android:color/holo_blue_light"
+                android:textAllCaps="false"
+                android:text="Cancel"
+                android:textSize="8pt"/>
+        </RelativeLayout>
 
     </RelativeLayout>
 
