--- a/src/android/res/layout/cszbarscanner.xml
+++ b/src/android/res/layout/cszbarscanner.xml
@@ -27,12 +27,12 @@
 
         <View android:id="@+id/csZbarScannerSight"
               android:layout_width="match_parent"
-              android:layout_height="1dp"
+              android:layout_height="match_parent"
               android:layout_marginLeft="10dp"
               android:layout_marginRight="10dp"
               android:layout_centerInParent="true"
               android:gravity="center_vertical"
-              android:background="#ff0000" />
+        />
 
         <TextView android:id="@+id/csZbarScannerInstructions"
                   android:layout_width="296dp"
